--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,8 @@ body {
          display: flex;
          flex-direction: column;
          align-items: center;
+         flex-direction: column;
+         align-items: center;
     }
 
     .main-page-left-side{
